Remove Integration Test within Project main execution Move integration test into mvn build